2022-08-31T16:28:27Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2965477265
* notice: last 14d: unq all: 16 120
* notice: prev accum: outdated-unq outdated-all / unq all: 0 0 / 20 119
* notice: next accum: outdated-unq outdated-all / unq all: 0 0 / 21 120
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +7 +13 -0 -0 / 7 13
* notice: removed / changed dates: [] / [2022-08-31]

2022-08-31T13:34:20Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2964265172
* notice: last 14d: unq all: 15 119
* notice: prev accum: outdated-unq outdated-all / unq all: 0 0 / 0 0
* notice: next accum: outdated-unq outdated-all / unq all: 0 0 / 20 119
* notice: prev exec diff / last date diff / accum: unq all: +20 +119 -0 -0 / +6 +12 -0 -0 / 6 12
* notice: removed / changed dates: [] / [2022-08-29 2022-08-30 2022-08-31]