@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-31T16:28:27Z",
+  "timestamp" : "2022-09-01T02:03:55Z",
   "count_outdated" : 0,
   "uniques_outdated" : 0,
-  "count" : 120,
-  "uniques" : 21,
+  "count" : 121,
+  "uniques" : 22,
   "clones" : [
     {
       "timestamp": "2022-08-29T00:00:00Z",
@@ -21,10 +21,10 @@
     },
     {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 13,
-      "count_minmax": [ 12, 13 ],
-      "uniques": 7,
-      "uniques_minmax": [ 6, 7 ]
+      "count": 14,
+      "count_minmax": [ 12, 14 ],
+      "uniques": 8,
+      "uniques_minmax": [ 6, 8 ]
     }
   ]
 }
