@@ -1,6 +1,6 @@
 {
-  "count": 120,
-  "uniques": 16,
+  "count": 121,
+  "uniques": 17,
   "clones": [
     {
       "timestamp": "2022-08-29T00:00:00Z",
@@ -14,8 +14,8 @@
     },
     {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 13,
-      "uniques": 7
+      "count": 14,
+      "uniques": 8
     }
   ]
 }
