@@ -1,3 +1,11 @@
+2022-09-01T02:03:55Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2968362552
+* notice: last 14d: unq all: 17 121
+* notice: prev accum: outdated-unq outdated-all / unq all: 0 0 / 21 120
+* notice: next accum: outdated-unq outdated-all / unq all: 0 0 / 22 121
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +8 +14 -0 -0 / 8 14
+* notice: removed / changed dates: [] / [2022-08-31]
+
 2022-08-31T16:28:27Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2965477265
 * notice: last 14d: unq all: 16 120
